@@ -18,12 +18,18 @@ package org.apache.lucene.util.junitcompat;
  */
 
 import java.io.File;
+import java.io.IOException;
+import java.io.RandomAccessFile;
 
+import org.apache.lucene.util.Constants;
+import org.apache.lucene.util.LuceneTestCase;
 import org.apache.lucene.util.TestUtil;
 import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.JUnitCore;
 import org.junit.runner.Result;
+
+import com.carrotsearch.randomizedtesting.RandomizedTest;
 
 public class TestLeaveFilesIfTestFails extends WithNestedTests {
   public TestLeaveFilesIfTestFails() {
@@ -34,7 +40,6 @@ public class TestLeaveFilesIfTestFails extends WithNestedTests {
     static File file;
     public void testDummy() {
       file = createTempDir("leftover");
-      file.mkdirs();
       fail();
     }
   }
@@ -43,7 +48,33 @@ public class TestLeaveFilesIfTestFails extends WithNestedTests {
   public void testLeaveFilesIfTestFails() {
     Result r = JUnitCore.runClasses(Nested1.class);
     Assert.assertEquals(1, r.getFailureCount());
-    Assert.assertTrue(Nested1.file.exists());
+    Assert.assertTrue(Nested1.file != null && Nested1.file.exists());
     Nested1.file.delete();
   }
+  
+  public static class Nested2 extends WithNestedTests.AbstractNestedTest {
+    static File file;
+    static File parent;
+    static RandomAccessFile openFile;
+
+    @SuppressWarnings("deprecation")
+    public void testDummy() throws Exception {
+      file = new File(createTempDir("leftover"), "child.locked");
+      openFile = new RandomAccessFile(file, "rw");
+
+      parent = LuceneTestCase.getTempDirBase();
+    }
+  }
+
+  @Test
+  public void testWindowsUnremovableFile() throws IOException {
+    RandomizedTest.assumeTrue("Requires Windows.", Constants.WINDOWS);
+
+    Result r = JUnitCore.runClasses(Nested2.class);
+    super.prevSysErr.println(r.getFailures().get(0).getMessage());
+    Assert.assertEquals(1, r.getFailureCount());
+
+    Nested2.openFile.close();
+    TestUtil.rm(Nested2.parent);
+  }  
 }
